Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                      </li>
 
                      <li>
-                        <a href="#" class="footer__link">Nuestro equipo (yo xd)</a>
+                        <a href="#" class="footer__link">Nuestro equipo</a>
                      </li>
 
                      <li>
@@ -986,8 +986,8 @@
 
                      <li>
                         <address class="footer__info">
-                           meorellanaramirez@gmail.com <br>
-                           +54 9 11 6940-0937
+                          correoficticio@gmail.com <br>
+                           +54 9 123456789
                         </address>
                      </li>
                   </ul>
@@ -997,15 +997,15 @@
                   <h3 class="footer__title">Social</h3>
 
                   <div class="footer__social">
-                     <a href="https://github.com/OrellanaMatias" target="_blank" class="footer__social-link">
+                     <a href="https://github.com" target="_blank" class="footer__social-link">
                         <i class="ri-github-line"></i>
                      </a>
 
-                     <a href="https://instagram.com/orellana_emanuel_" target="_blank" class="footer__social-link">
+                     <a href="https://instagram.com/" target="_blank" class="footer__social-link">
                         <i class="ri-instagram-line"></i>
                      </a>
 
-                     <a href="https://www.linkedin.com/in/orellana-matias" target="_blank" class="footer__social-link">
+                     <a href="https://www.linkedin.com/" target="_blank" class="footer__social-link">
                         <i class="ri-linkedin-box-line"></i>
                      </a>
                   </div>
@@ -1014,8 +1014,8 @@
          </div>
 
          <span class="footer__copy">
-            E-Book no existe, solo es una empresa inventada para realizar este proyecto - Orellana Matias
-         </span>
+            E-Book no existe, solo es una empresa inventada para realizar este proyecto - Orellana
+ </span>
       </footer>
 
       <!--========== SCROLL UP ==========-->
